[package]
name = "grainlify-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23"

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }
test-utils = { path = "../test-utils" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
